# routes/adminRoutes.js
@@ -1,9 +1,11 @@
 let express = require('express');
 let router = express.Router();
 const adminController = require('../src/controller/adminController');
+const idMiddleWare = require('../src/middleware/idMiddleware');
+const jwtFn = require('../src/middleware/auth');
 
-    router.get('/', adminController.getAlltutorInfo); 
+    router.get('/', jwtFn.isAuth, idMiddleWare.isAdmin, adminController.getAlltutorInfo); 
     
-    router.patch('/:tutorIdCustom', adminController.updateTutorIdentity);
+    router.patch('/:tutorIdCustom', jwtFn.isAuth, idMiddleWare.isAdmin, adminController.updateTutorIdentity);
 
 module.exports = router;
